test/errors/scan_bad_coding_bom_utf8.py
# coding: utf8
print("x")
